<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollViewContainerDesign">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_product_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/photo_add"
        android:padding="@dimen/mostUsedPadding"
        android:layout_weight="2"/>

    <View
        style="@style/ViewDesignHorizontal">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_text_view"
                style="@style/TitleTextViewDesign"
                android:text="@string/name_title" />

            <TextView
                android:id="@+id/price_text_view"
                style="@style/TitleTextViewDesign"
                android:text="@string/price_title"/>

            <TextView
                style="@style/TitleTextViewDesign"
                android:text="@string/in_stock_title"
                android:id="@+id/in_stock_text_view"/>


            <TextView
                android:id="@+id/supplier_text_view"
                style="@style/TitleTextViewDesign"
                android:text="@string/supplier_title"/>



        </LinearLayout>

        <View
            style="@style/ViewDesignVertical">

        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                style="@style/NestedLayoutsDesign">


                <EditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:padding="@dimen/editTextPadding"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_value_text_view"
                    android:padding="@dimen/mostUsedPadding"/>

            </LinearLayout>


            <RelativeLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical"
                    android:id="@+id/price_value_container">

                    <EditText
                        android:id="@+id/price_edit_text"
                        style="@style/wrapViews"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone"
                        android:layout_gravity="center_vertical"
                        android:padding="@dimen/editTextPadding"/>

                    <TextView
                        style="@style/wrapViews"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/price_value_text_view"
                        android:padding="@dimen/mostUsedPadding"/>

                </LinearLayout>

                <TextView
                    style="@style/wrapViews"
                    android:layout_toRightOf="@+id/price_value_container"
                    android:layout_toEndOf="@+id/price_value_container"
                    android:layout_centerInParent="true"
                    android:text="@string/euro"
                    android:padding="0dp"/>


            </RelativeLayout>



            <LinearLayout
                style="@style/NestedLayoutsDesign">

                <Button
                    style="@style/buttonDimensStyle"
                    android:id="@+id/decrement_button"
                    android:text="@string/decrement"/>

                <EditText
                    style="@style/wrapViews"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:padding="@dimen/editTextPadding"
                    android:id="@+id/in_stock_edit_text"/>

                <TextView
                    style="@style/wrapViews"
                    android:id="@+id/in_stock_value_text_view"
                    android:padding="@dimen/mostUsedPadding"/>

                <Button
                    style="@style/buttonDimensStyle"
                    android:id="@+id/increment_button"
                    android:text="@string/increment"/>


            </LinearLayout>

            <LinearLayout
                style="@style/NestedLayoutsDesign">

                <EditText
                    android:id="@+id/supplier_edit_text"
                    android:layout_width="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/editTextPadding"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/supplier_value_text_view"
                    android:padding="@dimen/mostUsedPadding"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        style="@style/ViewDesignHorizontal">

    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            style="@style/wrapViews"
            android:layout_centerInParent="true"
            android:text="@string/orderButton"
            android:textColor="@color/colorQuantityText"
            android:background="@drawable/roundedbutton"
            android:id="@+id/order_button"/>


    </RelativeLayout>

</LinearLayout>
</ScrollView>
